@@ -1,6 +1,10 @@
 # ChangeLog of Nadoka($Rev$)
 # $Id$ 
 
+2009-05-20  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+
+	* ndk/bot.rb, ndk/server.rb: add on_server_connected.
+
 2009-04-16  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* nadokarc, ndk/config.rb, ndk/server.rb, rice/irc.rb: support SSL.
